--- a/Classibility/Base.lproj/Main.storyboard
+++ b/Classibility/Base.lproj/Main.storyboard
@@ -398,11 +398,11 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tEg-CH-9qx">
-                                            <rect key="frame" x="16" y="97" width="30" height="30"/>
-                                        </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ij0-Kg-Zbm">
                                             <rect key="frame" x="193" y="97" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="ij0-Kg-Zbm" secondAttribute="height" multiplier="1:1" id="QRH-A8-3bn"/>
+                                            </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0lk-Ii-L48">
                                             <rect key="frame" x="247" y="97" width="28.5" height="34"/>
@@ -444,19 +444,23 @@
                                                 </label>
                                             </subviews>
                                         </stackView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tEg-CH-9qx">
+                                            <rect key="frame" x="16" y="99" width="30" height="30"/>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="ij0-Kg-Zbm" firstAttribute="leading" secondItem="i3q-Mm-P8r" secondAttribute="trailing" constant="10" id="02e-EB-eSH"/>
                                         <constraint firstItem="0lk-Ii-L48" firstAttribute="leading" secondItem="ij0-Kg-Zbm" secondAttribute="trailing" constant="8" id="03x-Nu-O2Q"/>
                                         <constraint firstItem="i3q-Mm-P8r" firstAttribute="leading" secondItem="tEg-CH-9qx" secondAttribute="trailing" constant="2" id="2Gv-S4-qmb"/>
                                         <constraint firstItem="Kyu-ob-etD" firstAttribute="leading" secondItem="woK-S2-JHr" secondAttribute="leadingMargin" constant="10" id="E3Z-lL-WwF"/>
+                                        <constraint firstItem="ij0-Kg-Zbm" firstAttribute="top" secondItem="woK-S2-JHr" secondAttribute="topMargin" constant="90" id="FwM-i6-cUE"/>
+                                        <constraint firstItem="tEg-CH-9qx" firstAttribute="top" secondItem="Kyu-ob-etD" secondAttribute="bottom" constant="25" id="JNR-Db-C3j"/>
                                         <constraint firstItem="0lk-Ii-L48" firstAttribute="top" secondItem="woK-S2-JHr" secondAttribute="top" constant="95" id="Q2u-R9-yW9"/>
                                         <constraint firstItem="4hX-AL-R3N" firstAttribute="top" secondItem="woK-S2-JHr" secondAttribute="topMargin" constant="10" id="RKT-Ja-8MI"/>
                                         <constraint firstItem="Kyu-ob-etD" firstAttribute="top" secondItem="woK-S2-JHr" secondAttribute="topMargin" constant="35" id="XoB-jH-UqO"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="0lk-Ii-L48" secondAttribute="trailing" constant="10" id="bKg-4c-tri"/>
                                         <constraint firstItem="4hX-AL-R3N" firstAttribute="leading" secondItem="woK-S2-JHr" secondAttribute="leadingMargin" constant="5" id="oXv-W7-107"/>
                                         <constraint firstItem="i3q-Mm-P8r" firstAttribute="top" secondItem="Kyu-ob-etD" secondAttribute="bottom" constant="20" id="tzI-Uf-DfN"/>
-                                        <constraint firstItem="tEg-CH-9qx" firstAttribute="leading" secondItem="woK-S2-JHr" secondAttribute="leadingMargin" constant="3" id="zek-Qw-YB2"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -498,16 +502,66 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0R2-zi-2xi">
-                                <rect key="frame" x="20" y="109" width="335" height="493"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="538"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Class Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLN-Fk-9Rr">
+                                <rect key="frame" x="16" y="99" width="91" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="whk-df-zb0">
+                                <rect key="frame" x="16" y="128" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Subject Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUo-Rh-8BN">
+                                <rect key="frame" x="16" y="166" width="104" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="djU-rn-C4G">
+                                <rect key="frame" x="16" y="195" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sSl-KY-tvQ">
+                                <rect key="frame" x="30" y="325" width="315" height="222"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="sSl-KY-tvQ" secondAttribute="height" multiplier="105:74" id="424-vS-NhP"/>
+                                </constraints>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ie6-0d-Cky">
+                                <rect key="frame" x="30" y="281" width="312" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Location"/>
+                                    <segment title="Time"/>
+                                </segments>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="SegmentTapped:" destination="5Nw-XB-TCG" eventType="valueChanged" id="ut9-NZ-xpo"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" red="0.12156862745098039" green="0.17254901960784313" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="AwN-Ju-d7v" firstAttribute="bottom" secondItem="0R2-zi-2xi" secondAttribute="bottom" constant="65" id="8RH-l4-Siv"/>
                             <constraint firstItem="0R2-zi-2xi" firstAttribute="leading" secondItem="AwN-Ju-d7v" secondAttribute="leading" constant="20" id="B88-CU-PB3"/>
+                            <constraint firstItem="sSl-KY-tvQ" firstAttribute="leading" secondItem="AwN-Ju-d7v" secondAttribute="leading" constant="30" id="FOj-JE-tLU"/>
                             <constraint firstItem="0R2-zi-2xi" firstAttribute="top" secondItem="AwN-Ju-d7v" secondAttribute="top" constant="45" id="IbV-e4-gcR"/>
                             <constraint firstItem="0R2-zi-2xi" firstAttribute="top" secondItem="AwN-Ju-d7v" secondAttribute="top" id="Lqe-2b-7b7"/>
+                            <constraint firstItem="AwN-Ju-d7v" firstAttribute="trailing" secondItem="sSl-KY-tvQ" secondAttribute="trailing" constant="30" id="aTD-hf-N19"/>
                             <constraint firstItem="AwN-Ju-d7v" firstAttribute="trailing" secondItem="0R2-zi-2xi" secondAttribute="trailing" constant="20" id="cL5-Nx-OXT"/>
+                            <constraint firstItem="AwN-Ju-d7v" firstAttribute="bottom" secondItem="sSl-KY-tvQ" secondAttribute="bottom" constant="120" id="dfX-Jb-8GP"/>
                             <constraint firstItem="AwN-Ju-d7v" firstAttribute="trailing" secondItem="0R2-zi-2xi" secondAttribute="trailing" id="i4a-SR-T1f"/>
                             <constraint firstItem="0R2-zi-2xi" firstAttribute="leading" secondItem="AwN-Ju-d7v" secondAttribute="leading" id="mkY-b0-3Xm"/>
                         </constraints>
@@ -515,13 +569,23 @@
                     </view>
                     <navigationItem key="navigationItem" title="New Class" id="QVX-Vp-My1">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="e1N-sU-dLS"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="fuO-R0-CSL"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="fuO-R0-CSL">
+                            <connections>
+                                <segue destination="Lfd-Bc-AoA" kind="unwind" unwindAction="unwindToMainClassWithSender:" id="Flz-DF-w6F"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="ClassName" destination="whk-df-zb0" id="cer-fz-qtG"/>
                         <outlet property="Panel" destination="0R2-zi-2xi" id="1jc-kG-cs7"/>
+                        <outlet property="SegmentControl" destination="ie6-0d-Cky" id="Lcc-Qb-iAB"/>
+                        <outlet property="saveButton" destination="fuO-R0-CSL" id="hT2-Pq-PRH"/>
+                        <outlet property="subjectCode" destination="djU-rn-C4G" id="IaI-UA-nrZ"/>
+                        <outlet property="viewContainer" destination="sSl-KY-tvQ" id="RNR-jK-5Px"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IaZ-b4-UAB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Lfd-Bc-AoA" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="4956" y="-29.23538230884558"/>
         </scene>
